# solis

./: .gitattributes  Cargo.toml  RADME.md  README.md  index.html  package-lock.json  package.json  search-index.js  tailwind.config.js
ref/: Data Output from F1 22 v16.docx
search.desc/solis/: solis-desc-0-.js
solis/: all.html  index.html
solis/core/: index.html  sidebar-items.js  struct.PacketCarSetupData.html  struct.PacketEventData.html  struct.PacketFinalClassificationData.html  struct.PacketLapData.html  struct.PacketSessionData.html
solis/core/packets/: struct.PacketCarSetupData.html  struct.PacketEventData.html  struct.PacketFinalClassificationData.html  struct.PacketLapData.html  struct.PacketMotionData.html  struct.PacketParticipantsData.html
src/: App.css  App.tsx  ConnectionPanel.tsx  DataPanel.tsx  TitleBar.tsx  index.css  main.rs  main.tsx  sidebar.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: io.rs  mod.rs
src-tauri/src/audio/models/: prompt.txt
src-tauri/src/bridge/: events.rs  mod.rs
src-tauri/src/core/: cm_events.rs  decoder.rs  ids.rs  mod.rs  packets.rs  session.rs
src-tauri/src/strategy/: decision_making.rs  mod.rs  system_prompt.txt
src/components/: Dropdown.tsx  Header.tsx  Sidebar.tsx  TitleBar.tsx  VolumeSlider.tsx
src/containers/: App.css  App.tsx  AudioPanel.tsx  ConnectionPanel.tsx  DataPanel.tsx  EngineerPanel.tsx
src/core/: decoder.rs  ids.rs  mod.rs  packets.rs
src/solis/core/: ids.rs.html  packets.rs.html
src/styles/: index.css
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/marker/: trait.Copy.js
