[package]
name = "Solis"
version = "0.1.0"
description = "Your AI Race Engineer"
authors = ["Ethan Oliveira"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "solis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
socket2 = "0.6.0"
cpal = "0.16.0"
rubato = "0.16.1"
whisper-rs = { version = "0.15.1", features = ["cuda"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
# hound = "3.5.1"
